메인화면 랜덤 수정